fix layout issues updtae translation

--- a/datadir/Common_Content/common-db5/en-US/css/common.css
+++ b/datadir/Common_Content/common-db5/en-US/css/common.css
@@ -236,30 +236,3 @@ li {
 /*	margin-bottom: 16px; */
 }
 
-.procedure ol,
-.procedure ul,
-ul.stepalternatives {
-	counter-reset: item;
-	list-style-position: outside;
-	list-style-type: none;
-	list-style-image: none;
-}
-
-li.step {
-}
-
-li.step:before {
-	content: counters(item, ".") ". ";
-	counter-increment: item;
-	display:inline-block;
-	position: relative;
-	width: 12em;
-	right: 12.5em;
-	text-align: right;
-/*	vertical-align: text-bottom; */
-}
-
-li.step > div:first-child {
-	margin-top: -1.29em;
-}
-
